unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Extraction_Date__c.field-meta.xml
<CustomField>
    <fullName>Extraction_Date__c</fullName>
    <label>Extraction Date</label>
    <type>Date</type>
</CustomField>