unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Oppty_Name__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Name__c</fullName>
    <label>Oppty Name</label>
    <type>TextArea</type>
</CustomField>