unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Oppty_Owner__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Owner__c</fullName>
    <label>Oppty Owner</label>
    <type>TextArea</type>
</CustomField>