unpackaged/main/default/objects/Forecast_Snapshot__c/fields/Prof_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prof_Booking_Amount__c</fullName>
    <label>Prof Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>